--- a/main.html
+++ b/main.html
@@ -3,10 +3,20 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<button class="btn btn-" id="button-1">Button-1</button>
+    <button class="btn btn-outline-secondary" id="button-2">Button-2</button>
+    <button class="btn btn-success btn-lg" id="button-3">Button-3</button>
+    <button class="btn btn-danger btn-sm" id="button-4">Button-4</button>
+    <button class="btn btn-warning btn-block w-100" id="button-5">Button-5</button>
+    <button class="btn btn-info" id="button-6">Button-6</button>
+    <button class="btn btn-light" id="button-7">Button-7</button>
+    <button class="btn btn-link" id="button-8">Button-8</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
